<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/contentTextView"
            android:text="@string/home_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@android:color/black"
            />

        <TextView
            android:id="@+id/titleTextView"
            android:text="@string/home_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            />


    </LinearLayout>

    <GridLayout
        android:id="@+id/imagesLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_below="@+id/mainLayout"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/home_img1_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/qualityImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@color/cast_expanded_controller_ad_label_background_color"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            >

            <TextView
                android:text="@string/home_img2_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/serviceImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@color/cast_expanded_controller_ad_label_background_color"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/home_img3_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                />

            <ImageView
                android:id="@+id/cateringImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@color/cast_expanded_controller_ad_label_background_color"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:text="@string/home_img4_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/delicatessenImageView"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:srcCompat="@color/cast_expanded_controller_ad_label_background_color"

                />

        </LinearLayout>

    </GridLayout>

</RelativeLayout>